[tool.poetry]
name = "zoom-audio-bot"
version = "0.1.0"
description = "Zoom bot that joins meetings and plays audio"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
zoomus = "^1.1.5"
pydub = "^0.25.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
websockets = "^12.0"
jwt = "^1.3.1"
pyjwt = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
